Link blogs from index page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
   <body>
-      Hello DBC!
+      <h1>Brian Kennedy</h1>
+      <h3>Technical Blogs</h3>
+      <ul>
+      	<li><a href="http://briankennedy1.github.io/blog/t1-git-blog.html">I wish we had Git back in the day</a></li>
+      </ul>
+      <h3>Cultural Blogs</h3>
+      <ul>
+      	<li><a href="http://briankennedy1.github.io/blog/c1-chefs-kitchen.html">You get out what you put in</a></li>
+      </ul>
   </body>
 </html>
