Step forward on blog

--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
-<html>
-  <body style="font-family: arial">
-      <h1>Brian Kennedy</h1>
-      <h3>Technical Blogs</h3>
-      <ul>
-      	<li><a href="http://briankennedy1.github.io/blog/t1-git-blog.html">I wish we had Git back in the day</a></li>
-      </ul>
-      <h3>Cultural Blogs</h3>
-      <ul>
-      	<li><a href="http://briankennedy1.github.io/blog/c1-chefs-kitchen.html">You get out what you put in</a></li>
-      </ul>
-  </body>
-</html>
+<!DOCTYPE html>
+<head>
+  <title>Blog Title | Brian Kennedy</title>
+  <meta charset="UTF-8">
+  <link href='http://fonts.googleapis.com/css?family=Khula:800,400' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/blog-stylesheet.css">
+</head>
+
+<main>
+  <h1>Brian Kennedy</h1>
+  <h2>Bike riding, web developing, mapping and enjoying.</h2>
+
+  <!-- Posting date -->
+  <h4></h4>
+
+  <section>
+    <!-- Content -->
+    <h3>Blogs</h3>
+    <ul>
+      <li><a href="http://briankennedy1.github.io/blog/t1-git-blog.html">I wish we had Git back in the day | Technical #1</a></li>
+      <li><a href="http://briankennedy1.github.io/blog/c1-chefs-kitchen.html">You get out what you put in | Cultural #1</a></li>
+    </ul>
+  </section>
+</main>
+
+
+
+
+
+
+
+
