Add social icons

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <head>
   <title>Blog Title | Brian Kennedy</title>
   <meta charset="UTF-8">
-  <link href='http://fonts.googleapis.com/css?family=Khula:800,400' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="stylesheets/blog-stylesheet.css">
+  <link rel="stylesheet" href="stylesheets/blog-stylesheet.css" type="text/css">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Khula:800,400" type="text/css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 
 <main>
   <h1>Brian Kennedy</h1>
-  <h2>Bike riding, web developing, mapping and enjoying.</h2>
+  <h2>Bike riding, web developing, mapping and evolving.</h2>
 
   <!-- Posting date -->
-  <h4></h4>
+  <h4><i class="fa fa-github-square"></i> <i class="fa fa-twitter-square"></i> <i class="fa fa-linkedin-square"></i></h4>
 
   <section>
     <!-- Content -->
