Embiggen social icons

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>Blog Title | Brian Kennedy</title>
+  <title>Brian Kennedy</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="stylesheets/blog-stylesheet.css" type="text/css">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Khula:800,400" type="text/css">
@@ -12,7 +12,7 @@
   <h2>Bike riding, web developing, mapping and evolving.</h2>
 
   <!-- Posting date -->
-  <h4><i class="fa fa-github-square"></i> <i class="fa fa-twitter-square"></i> <i class="fa fa-linkedin-square"></i></h4>
+  <h4><i class="fa fa-github-square fa-3x"></i> <i class="fa fa-twitter-square fa-3x"></i> <i class="fa fa-linkedin-square fa-3x"></i></h4>
 
   <section>
     <!-- Content -->
