--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <title>Brian Kennedy</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="stylesheets/blog-stylesheet.css" type="text/css">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Khula:800,400" type="text/css">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Khula:800,400" type="text/css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 
 <main>
@@ -12,7 +12,11 @@
   <h2>Bike riding, web developing, mapping and evolving.</h2>
 
   <!-- Posting date -->
-  <h4><i class="fa fa-github-square fa-3x"></i> <i class="fa fa-twitter-square fa-3x"></i> <i class="fa fa-linkedin-square fa-3x"></i></h4>
+  <h4>
+    <a href="https://github.com/briankennedy1"><i class="fa fa-github-square fa-2x"></i></a>
+    <a href="https://twitter.com/BK_DBC"><i class="fa fa-twitter-square fa-2x"></i></a>
+    <a href="http://www.linkedin.com/in/briankennedy82"><i class="fa fa-linkedin-square fa-2x"></i></a>
+  </h4>
 
   <section>
     <!-- Content -->
