Tired of this photo yet?

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <main>
   <h1>Brian Kennedy</h1>
+  <img src="img/bk.jpg">
   <h2>Bike riding, web developing, mapping and evolving.</h2>
 
   <!-- Posting date -->
