--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 
   <!-- Posting date -->
   <h4>
-    <a href="https://github.com/briankennedy1"><i class="fa fa-github-square fa-2x"></i></a>
-    <a href="https://twitter.com/BK_DBC"><i class="fa fa-twitter-square fa-2x"></i></a>
-    <a href="http://www.linkedin.com/in/briankennedy82"><i class="fa fa-linkedin-square fa-2x"></i></a>
+    <a href="https://www.strava.com/athletes/166021"><i class="fa fa-bicycle fa-2x"></i></a>
+    <a href="https://github.com/briankennedy1"><i class="fa fa-github fa-2x"></i></a>
+    <a href="http://www.openstreetmap.org/user/Brian%20Kennedy/history#map=8/38.666/-120.788"><i class="fa fa-map-marker fa-2x"></i></a>
+    <a href="https://twitter.com/BK_DBC"><i class="fa fa-twitter fa-2x"></i></a>
+    <a href="http://www.linkedin.com/in/briankennedy82"><i class="fa fa-linkedin fa-2x">
+    </i></a>
+
   </h4>
 
   <section>
