--- a/index.html
+++ b/index.html
@@ -13,30 +13,21 @@
   <h2>Bike riding, web developing, mapping and evolving.</h2>
 
   <!-- Posting date -->
-  <h4>
-    <a href="https://www.strava.com/athletes/166021"><i class="fa fa-bicycle fa-2x"></i></a>
-    <a href="https://github.com/briankennedy1"><i class="fa fa-github fa-2x"></i></a>
-    <a href="http://www.openstreetmap.org/user/Brian%20Kennedy/history#map=8/38.666/-120.788"><i class="fa fa-map-marker fa-2x"></i></a>
-    <a href="https://twitter.com/BK_DBC"><i class="fa fa-twitter fa-2x"></i></a>
-    <a href="http://www.linkedin.com/in/briankennedy82"><i class="fa fa-linkedin fa-2x">
-    </i></a>
-
-  </h4>
-
   <section>
-    <!-- Content -->
-    <h3>Blogs</h3>
+    <h4>
+      <a href="https://www.strava.com/athletes/166021"><i class="fa fa-bicycle fa-2x"></i></a>
+      <a href="https://github.com/briankennedy1"><i class="fa fa-github fa-2x"></i></a>
+      <a href="http://www.openstreetmap.org/user/Brian%20Kennedy/history#map=8/38.666/-120.788"><i class="fa fa-map-marker fa-2x"></i></a>
+      <a href="https://twitter.com/BK_DBC"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="http://www.linkedin.com/in/briankennedy82"><i class="fa fa-linkedin fa-2x">
+      </i></a>
+    </h4>
+  </section>
+  <section>
+    <h2>Blogs</h2>
     <ul>
       <li><a href="http://briankennedy1.github.io/blog/t1-git-blog.html">I wish we had Git back in the day | Technical #1</a></li>
       <li><a href="http://briankennedy1.github.io/blog/c1-chefs-kitchen.html">You get out what you put in | Cultural #1</a></li>
     </ul>
   </section>
 </main>
-
-
-
-
-
-
-
-
