--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>Brian Kennedy</title>
+  <title>Brian Kennedy | Bike riding, web developing, mapping and evolving.</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="stylesheets/blog-stylesheet.css" type="text/css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Khula:800,400" type="text/css">
@@ -9,21 +9,21 @@
 
 <main>
   <h1>Brian Kennedy</h1>
-  <img src="img/bk.jpg">
   <h2>Bike riding, web developing, mapping and evolving.</h2>
 
   <!-- Posting date -->
   <section>
     <h4>
-      <a href="https://www.strava.com/athletes/166021"><i class="fa fa-bicycle fa-2x"></i></a>
-      <a href="https://github.com/briankennedy1"><i class="fa fa-github fa-2x"></i></a>
-      <a href="http://www.openstreetmap.org/user/Brian%20Kennedy/history#map=8/38.666/-120.788"><i class="fa fa-map-marker fa-2x"></i></a>
-      <a href="https://twitter.com/BK_DBC"><i class="fa fa-twitter fa-2x"></i></a>
-      <a href="http://www.linkedin.com/in/briankennedy82"><i class="fa fa-linkedin fa-2x">
+      <a href="https://www.strava.com/athletes/166021" target="_blank"><i class="fa fa-bicycle fa-2x"></i></a>
+      <a href="https://github.com/briankennedy1" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+      <a href="http://www.openstreetmap.org/user/Brian%20Kennedy/history#map=8/38.666/-120.788" target="_blank"><i class="fa fa-map-marker fa-2x"></i></a>
+      <a href="https://twitter.com/BK_DBC" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="http://www.linkedin.com/in/briankennedy82" target="_blank"><i class="fa fa-linkedin fa-2x">
       </i></a>
     </h4>
   </section>
   <section>
+   <img src="img/bk.jpg">
     <h2>Blogs</h2>
     <ul>
       <li><a href="http://briankennedy1.github.io/blog/t1-git-blog.html">I wish we had Git back in the day | Technical #1</a></li>
