Fix alt tag on img

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </h4>
   </section>
   <section>
-   <img src="img/bk.jpg">
+   <img src="img/bk.jpg" alt="BK in the kayak">
     <h2>Blogs</h2>
     <ul>
       <li><a href="http://briankennedy1.github.io/blog/t1-git-blog.html">I wish we had Git back in the day | Technical #1</a></li>
