Change camera to globe

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="https://www.strava.com/athletes/166021" target="_blank"><i class="fa fa-bicycle fa-2x"></i></a>
       <a href="https://github.com/briankennedy1" target="_blank"><i class="fa fa-github fa-2x"></i></a>
       <a href="http://www.openstreetmap.org/user/Brian%20Kennedy/history#map=8/38.666/-120.788" target="_blank"><i class="fa fa-map-marker fa-2x"></i></a>
-      <a href="https://www.google.com/maps/views/profile/117687989648671247754" target="_blank"><i class="fa fa-camera-retro fa-2x"></i></a>
+      <a href="https://www.google.com/maps/views/profile/117687989648671247754" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
       <a href="https://twitter.com/BK_DBC" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
       <a href="http://www.linkedin.com/in/briankennedy82" target="_blank"><i class="fa fa-linkedin fa-2x">
       </i></a>
