--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
    <img src="img/bk.jpg" alt="BK in the kayak">
     <h2>Blogs</h2>
     <ul>
+      <li><a href="http://briankennedy1.github.io/blog/c3-thinking-style.html">Thinking about thinking | Cultural #2</a></li>
+      <li><a href="http://briankennedy1.github.io/blog/t3-arrays-hashes.html">Let's hash this out | Technical #3</a></li>
       <li><a href="http://briankennedy1.github.io/blog/t2-css-design.html">Thinking inside the box model | Technical #2</a></li>
       <li><a href="http://briankennedy1.github.io/blog/t1-git-blog.html">I wish we had Git back in the day | Technical #1</a></li>
       <li><a href="http://briankennedy1.github.io/blog/c1-chefs-kitchen.html">You get out what you put in | Cultural #1</a></li>
