--- a/index.html
+++ b/index.html
@@ -26,12 +26,19 @@
   <section>
    <img src="img/bk.jpg" alt="BK in the kayak">
     <h2>Blogs</h2>
+    <h4>Technical</h4>
     <ul>
-      <li><a href="http://briankennedy1.github.io/blog/c3-thinking-style.html">Thinking about thinking | Cultural #2</a></li>
-      <li><a href="http://briankennedy1.github.io/blog/t3-arrays-hashes.html">Let's hash this out | Technical #3</a></li>
-      <li><a href="http://briankennedy1.github.io/blog/t2-css-design.html">Thinking inside the box model | Technical #2</a></li>
-      <li><a href="http://briankennedy1.github.io/blog/t1-git-blog.html">I wish we had Git back in the day | Technical #1</a></li>
-      <li><a href="http://briankennedy1.github.io/blog/c1-chefs-kitchen.html">You get out what you put in | Cultural #1</a></li>
+      <li><a href="http://briankennedy1.github.io/blog/c5-feedback.html">Would you like fries with your shit sandwhich?</a></li>
+      <li><a href="http://briankennedy1.github.io/blog/t4-enumerable-methods.html">Groupin' ain't easy</a></li>
+      <li><a href="http://briankennedy1.github.io/blog/t3-arrays-hashes.html">Let's hash this out</a></li>
+      <li><a href="http://briankennedy1.github.io/blog/t2-css-design.html">Thinking inside the box model</a></li>
+      <li><a href="http://briankennedy1.github.io/blog/t1-git-blog.html">I wish we had Git back in the day</a></li>
     </ul>
-  </section>
+    <h4>Cultural</h4>
+    <ul>
+      <li><a href="http://briankennedy1.github.io/blog/c4-tech-issues.html">Reduce friction, forget force</a></li>
+      <li><a href="http://briankennedy1.github.io/blog/c3-thinking-style.html">Thinking about thinking</a></li>
+      <li><a href="http://briankennedy1.github.io/blog/c1-chefs-kitchen.html">You get out what you put in</a></li>
+    </ul>
+    </section>
 </main>
