--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <img src="img/bk.jpg" alt="BK in the kayak">
     <h4>Technical Blogs</h4>
     <ul>
-      <li><a href="http://briankennedy1.github.io/blog/c5-feedback.html">Would you like fries with your shit sandwhich?</a></li>
+      <li><a href="http://briankennedy1.github.io/blog/c5-feedback.html">Would you like fries with your shit sandhich?</a></li>
       <li><a href="http://briankennedy1.github.io/blog/t4-enumerable-methods.html">Groupin' ain't easy</a></li>
       <li><a href="http://briankennedy1.github.io/blog/t3-arrays-hashes.html">Let's hash this out</a></li>
       <li><a href="http://briankennedy1.github.io/blog/t2-css-design.html">Thinking inside the box model</a></li>
