--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
    <img src="img/bk.jpg" alt="BK in the kayak">
     <h4>Technical Blogs</h4>
     <ul>
+      <li><a href="http://briankennedy1.github.io/blog/t7-JavaScript.html">Leaving the warm blanket of Ruby for JavaScript</a></li>
       <li><a href="http://briankennedy1.github.io/blog/t6-oop-concepts.html">Classy Modules</a></li>
       <li><a href="http://briankennedy1.github.io/blog/t5-ruby-classes.html">X-Men trading cards as Ruby objects</a></li>
       <li><a href="http://briankennedy1.github.io/blog/t4-enumerable-methods.html">Groupin' ain't easy</a></li>
