--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
    <img src="img/bk.jpg" alt="BK in the kayak">
     <h4>Technical Blogs</h4>
     <ul>
+      <li><a href="http://briankennedy1.github.io/blog/t8-tech.html">Let's get recursive</a></li>
       <li><a href="http://briankennedy1.github.io/blog/t7-JavaScript.html">Leaving the warm blanket of Ruby for JavaScript</a></li>
       <li><a href="http://briankennedy1.github.io/blog/t6-oop-concepts.html">Classy Modules</a></li>
       <li><a href="http://briankennedy1.github.io/blog/t5-ruby-classes.html">X-Men trading cards as Ruby objects</a></li>
@@ -37,6 +38,8 @@
     </ul>
     <h4>Culture Blogs</h4>
     <ul>
+      <li><a href="http://briankennedy1.github.io/blog/c8-conflict.html">Seeing it through another's eyes</a></li>
+      <li><a href="http://briankennedy1.github.io/blog/c7-values.html">If you're not growing you're dying</a></li>
       <li><a href="http://briankennedy1.github.io/blog/c6-stereotype-threat.html">Stereotype Threat</a></li>
       <li><a href="http://briankennedy1.github.io/blog/c5-feedback.html">Would you like fries with your shit sandwich?</a></li>
       <li><a href="http://briankennedy1.github.io/blog/c4-tech-issues.html">Reduce friction, forget force</a></li>
