--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- Posting date -->
   <section>
-    <h4>
+    <h4 class="social">
       <a href="https://www.strava.com/athletes/166021" target="_blank"><i class="fa fa-bicycle fa-2x"></i></a>
       <a href="https://github.com/briankennedy1" target="_blank"><i class="fa fa-github fa-2x"></i></a>
       <a href="http://www.openstreetmap.org/user/Brian%20Kennedy/history#map=8/38.666/-120.788" target="_blank"><i class="fa fa-map-marker fa-2x"></i></a>
